# Equipo

./: CMakeLists.txt  Club.cpp  Club.h  Jugador.cpp  Jugador.h  Lista.cpp  Lista.h  Main.cpp  Nodo.cpp  Nodo.h
